[package]
name = "hello"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "hello"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.28.3"
rand = { git = "https://github.com/rust-random/rand", tag = "0.9.0" }

